add dependencies for jdbc support; use jpa instead of json for services registry dao

--- a/src/main/webapp/WEB-INF/cas.properties
+++ b/src/main/webapp/WEB-INF/cas.properties
@@ -21,7 +21,7 @@ server.name=http://casserver:8080
 server.prefix=${server.name}/cas
 
 # Spring Security's EL-based access rules for the /status URI of CAS that exposes health check information
-cas.securityContext.status.access=hasRole
+cas.securityContext.status.access=hasIpAddress('127.0.0.1')
 
 # Spring Security's EL-based access rules for the /statistics URI of CAS that exposes stats about the CAS server
 cas.securityContext.statistics.access=hasIpAddress('127.0.0.1')
@@ -46,9 +46,14 @@ host.name=casserver
 # One of these is needed if you are storing Services or Tickets in an RDBMS via JPA.
 #
 # database.hibernate.dialect=org.hibernate.dialect.OracleDialect
-# database.hibernate.dialect=org.hibernate.dialect.MySQLInnoDBDialect
+database.hibernate.dialect=org.hibernate.dialect.MySQL5InnoDBDialect
 # database.hibernate.dialect=org.hibernate.dialect.HSQLDialect
-# database.hibernate.batchSize=10
+database.hibernate.batchSize=10
+database.driverClass=com.mysql.jdbc.Driver
+database.url=jdbc:mysql://localhost/cas
+database.user=root
+database.password=
+
 
 ##
 # CAS SSO Cookie Generation & Security
