--- a/pom.xml
+++ b/pom.xml
@@ -16,6 +16,8 @@
         <maven.compiler.target>1.8</maven.compiler.target>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <servlet.version>3.1.0</servlet.version>
+        <mysql.driver.version>6.0.6</mysql.driver.version>
+        <c3p0.version>0.9.5.1</c3p0.version>
     </properties>
 
     <build>
@@ -32,6 +34,7 @@
                             <artifactId>cas-server-webapp</artifactId>
                             <excludes>
                                 <exclude>WEB-INF/cas.properties</exclude>
+                                <exclude>WEB-INF/deployerConfigContext.xml</exclude>
                                 <exclude>WEB-INF/web.xml</exclude>
                                 <exclude>WEB-INF/classes/log4j2.xml</exclude>
                             </excludes>
@@ -64,7 +67,18 @@
             <groupId>org.jasig.cas</groupId>
             <artifactId>cas-server-webapp-support</artifactId>
             <version>${cas.version}</version>
+            <exclusions>
+                <exclusion>
+                    <groupId>c3p0</groupId>
+                    <artifactId>c3p0</artifactId>
+                </exclusion>
+            </exclusions>
             <scope>compile</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.jasig.cas</groupId>
+            <artifactId>cas-server-support-jdbc</artifactId>
+            <version>${cas.version}</version>
         </dependency>
         <dependency>
             <groupId>javax.servlet</groupId>
@@ -72,6 +86,16 @@
             <version>${servlet.version}</version>
             <scope>provided</scope>
         </dependency>
+        <dependency>
+            <groupId>mysql</groupId>
+            <artifactId>mysql-connector-java</artifactId>
+            <version>${mysql.driver.version}</version>
+        </dependency>
+        <!--<dependency>-->
+            <!--<groupId>com.mchange</groupId>-->
+            <!--<artifactId>c3p0</artifactId>-->
+            <!--<version>${c3p0.version}</version>-->
+        <!--</dependency>-->
     </dependencies>
 
 
