--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -43,7 +43,7 @@
 
     <filter>
         <filter-name>LoggingFilter</filter-name>
-        <filter-class>com.unicom.LoggingFilter</filter-class>
+        <filter-class>py.web.LoggingFilter</filter-class>
     </filter>
     <filter-mapping>
         <filter-name>LoggingFilter</filter-name>
